Major Bug Fixes and Improvements
Libraries Updated
Call Ended Fixed
Fixed Debouncing Issue and improved touch algorithum
Added Display for Battery Level
Removed repeative code
Text Screen and text message functions bug fixes
Clear Notifications when selected (still needs intelligence of when
read)
SMS Send Screen fully displayed and formatted correctly, along with time

--- a/sscom.ini
+++ b/sscom.ini
@@ -4,9 +4,9 @@
 ;每行都以回車結束
 
 ;當前串口號Port
-N80=,COM6
+N80=,COM9
 ;波特率Band rate
-N81=,9600
+N81=,19200
 ;數據位Data bits
 N82=,8
 ;停止位Stop bits
@@ -20,19 +20,19 @@ N83=,1
 ;"="後面的A表示這是個ASC字串  
 ;Nx表示第幾條定義的字串(1<x<32)  
 N1=A,AT+CMGS="12083056901"
-N2=A,AT+CMGS="12083051122"
-N3=A,AT+CMGR=25
-N4=A,AT+IPR=4800
+N2=A,AT+CPOWD=1
+N3=A,AT+GSMBUSY
+N4=A,AT+IPR=1200
 N5=A,AT+CNUM
 N6=A,AT+CSCA="+12063130004"
 N7=A,AT+CMGL="ALL"
-N8=A,AT+CMGS="12084128499"
+N8=A,AT+CMGS="16239862493"
 N9=A,AT+CMGF=1 
-N10=A,ATD2084128499;
-N11=A,ATH
+N10=A,AT+GCAP
+N11=A,
 N12=A,AT+CCLK?
-N13=A,AT+CFUN=1,1
-N14=A,AT+CCLK= "14/08/15,18:32:20+00"
+N13=A,AT+IFC=0,0
+N14=A,AT+CCLK="14/07/21,14:41:50-28"
 N15=A,ATA
 N16=A,AT+CPIN?
 N17=A,AT+CGREG?
@@ -40,17 +40,17 @@ N18=A,AT+COPS?
 N19=A,AT+CSQ
 N20=A,AT+CFUN=?
 N21=A,AT+CLCK="SC",2
-N22=A,
-N23=A,
-N24=A,
-N25=A,
-N26=A,
-N27=A,
-N28=A,
-N29=A,
-N30=A,
-N31=A,
-N32=A,
+N22=A,AT+CMGR=1
+N23=A,AT+CMGL="ALL"
+N24=A,AT+CMGS="16239862493"
+N25=A,ATE1
+N26=A,ATP
+N27=A,ATT
+N28=A,AT+CPMS?
+N29=A,AT+VTS=1
+N30=A,ATZ
+N31=A,AT&F
+N32=A,AT+CSCLK=0
 
 ;主面板ASC字串  
 N33=,AT+CCLK?
