Bug Fixes && Code Improvements

--- a/sscom.ini
+++ b/sscom.ini
@@ -19,17 +19,17 @@ N83=,1
 ;"="後面的H表示這是個HEX資料串
 ;"="後面的A表示這是個ASC字串  
 ;Nx表示第幾條定義的字串(1<x<32)  
-N1=A,AT+CMGS="12083056901"
+N1=A,
 N2=A,AT+CPOWD=1
 N3=A,AT+GSMBUSY
-N4=A,AT+IPR=1200
+N4=A,AT+IPR=38400
 N5=A,AT+CNUM
 N6=A,AT+CSCA="+12063130004"
 N7=A,AT+CMGL="ALL"
-N8=A,AT+CMGS="16239862493"
-N9=A,AT+CMGF=1 
+N8=A,
+N9=A,AT+CMGF?
 N10=A,AT+GCAP
-N11=A,
+N11=A,AT+CBC
 N12=A,AT+CCLK?
 N13=A,AT+IFC=0,0
 N14=A,AT+CCLK="14/07/21,14:41:50-28"
@@ -40,9 +40,9 @@ N18=A,AT+COPS?
 N19=A,AT+CSQ
 N20=A,AT+CFUN=?
 N21=A,AT+CLCK="SC",2
-N22=A,AT+CMGR=1
+N22=A,AT+CMGR=3
 N23=A,AT+CMGL="ALL"
-N24=A,AT+CMGS="16239862493"
+N24=A,
 N25=A,ATE1
 N26=A,ATP
 N27=A,ATT
